[package]
name = "pastebar-app"
version = "0.0.1"
description = "PasteBar App"
license = "Creative Commons Attribution-NonCommercial (CC BY-NC) License"
repository = "https://github.com/PasteBar/PasteBarApp"
edition = "2021"
rust-version = "1.75.0"

[build-dependencies.tauri-build]
version = "1.5"
features = []

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
winreg = "0.52.0"
clipboard-win = "5.4.0"

[dependencies]
fs_extra = "1.3.0"
fns = "0"
mouse_position = "0.1.4"
keyring = "2.3.2"
dotenv = "0.15.0"
bcrypt = "0.15.1"
reqwest-middleware = "0.2.5"
http-cache-reqwest = { version = "0.13.0", default-features = false }
http-cache-mokadeser = "0.1.3"
# log = "0.4"
serde_yaml = "0.9.0"
scraper = "0.19.0"
# Format conversion dependencies
csv = "1.3"
html2text = "0.6"
html2md = "0.2"
html-to-react = "0.5.2"
pulldown-cmark = "0.10"
quick-xml = { version = "0.31", features = ["serialize"] }
toml = "0.8"

jsonpath-rust = "0.4.0"
ajson = "0.3.1"
is_executable = "1.0.1"
opener = "0.6.1"
platform-dirs = "0.3.0"
serde_json = "1.0"
clokwerk = "0.4"
colored_json = "3.2.0"
reqwest = "0.11.12"
nanoid = "0.4.0"
anyhow = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = [
  "clipboard-read-text",
  "clipboard-write-text",
  "dialog-ask",
  "dialog-confirm",
  "dialog-message",
  "dialog-open",
  "dialog-save",
  "fs-copy-file",
  "fs-create-dir",
  "fs-exists",
  "fs-read-dir",
  "fs-read-file",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "fs-write-file",
  "global-shortcut-all",
  "http-all",
  "path-all",
  "protocol-asset",
  "shell-open",
  "window-center",
  "window-close",
  "window-create",
  "window-hide",
  "window-maximize",
  "window-minimize",
  "window-request-user-attention",
  "window-set-always-on-top",
  "window-set-cursor-grab",
  "window-set-cursor-icon",
  "window-set-cursor-position",
  "window-set-cursor-visible",
  "window-set-decorations",
  "window-set-focus",
  "window-set-fullscreen",
  "window-set-icon",
  "window-set-ignore-cursor-events",
  "window-set-max-size",
  "window-set-min-size",
  "window-set-position",
  "window-set-resizable",
  "window-set-size",
  "window-set-skip-taskbar",
  "window-set-title",
  "window-show",
  "window-start-dragging",
  "window-unmaximize",
  "window-unminimize",
  "os-all",
  "system-tray",
  "icon-png",
  "clipboard",
  "updater",
  "reqwest-client"
] }
tokio = { version = "1.28.2", features = ["full"] } 

inputbot = { path = "libs/inputbot" }
window-state = { path = "libs/window-state" }
tauri-plugin-single-instance = { path = "libs/tauri-plugin-single-instance" }
tauri-plugin-deep-link = { path = "libs/deep-link", version = "0.1.2" }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dirs = "5.0.0"
diesel = { version = "2.1.4", features = ["sqlite", "chrono", "r2d2", "64-column-tables"] }

r2d2 = "0.8"
lazy_static = "1.4.0"
id3 = "1.0"
mime = "0.3"
mime_guess = "2.0"
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = "1.3.1"
once_cell = "1.7.0"
thiserror = "1.0"
arboard = "3.5.0"
image = "0.24.9"
tempfile = "3"
base64 = "0.22.0"
clipboard-master = "3.1.3"
img_hash = "3.2.0"
sha-1 = "0.10.1"
regex = "1.9.3"
active-win-pos-rs = "0.8"

lang_detect = { path = "libs/lang_detect" }
auto-launch = { path = "libs/auto-launch" }
tao = { path = "libs/tao-0.16.7" }
mid = { path = "libs/mid-hardware-id" }

linkify = "0.10.0"
tl = { version = "0.7.7" }
tld = "2.33.0"
url = "2.4.1"
html-escape = "0.2.13"
zip = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = { path = "libs/macos-accessibility-client" } 
objc = "0.2.7"
cocoa = "0.26.1"

[target.'cfg(target_os = "linux")'.dependencies]
inputbotlinux = { path = "libs/inputbotlinux" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
system-tray = ["tauri/system-tray"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
tao = { path = "libs/tao-0.16.7" }

[profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "z" # Optimize for size
strip = true # Remove debug symbols
