[package]
name = "mid"
version = "2.0.0"
edition = "2021"
authors = ["doroved"]
description = "Creating a Machine ID hash for MacOS/Windows/Linux"
readme = "README.md"
repository = "https://github.com/doroved/mid"
license = "MIT OR Apache-2.0"
keywords = ["hwid", "machineid", "hardware-id", "machineuid", "uuid"]
categories = ["authentication", "config", "accessibility"]

[lib]
doctest = false

[dependencies]
hex = "0.4.3"
hmac-sha256 = "1.1.7"
