[package]
name = "window-state"
version = "0.1.1"
description = "Save window positions and sizes and restore them when the app is reopened."
license = "MIT"  # or whatever license you're using
edition = "2021"
rust-version = "1.75.0"

[dependencies]
serde = "1.0"
serde_json = "1.0"
tauri = "1.0"
log = "0.4"
thiserror = "1.0"
bincode = "1.3"
bitflags = "2"